fixed title and button sizing on mobile

--- a/css/george-koors-book.webflow.css
+++ b/css/george-koors-book.webflow.css
@@ -383,6 +383,7 @@ p {
     margin-left: 0px;
     border-top-left-radius: 2px;
     border-bottom-left-radius: 2px;
+    height: auto;
   }
   .subtitle {
     padding-bottom: 36px;
