--- a/css/webflow.css
+++ b/css/webflow.css
@@ -1525,7 +1525,7 @@ textarea.w-select {
   position: relative;
   float: right;
   padding: 18px;
-  font-size: 24px;
+  font-size: 21px;
   display: none;
   cursor: pointer;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
